# cengine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cazel.sln  README.md
Cazel/: CMakeLists.txt  Cazel.vcxproj  Cazel.vcxproj.filters
Cazel/include/: CMakeLists.txt  Cazel.h  czpch.h
Cazel/include/Cazel/: Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  Window.h  keycodes.h
Cazel/include/Cazel/Bezier/: Bezier.h
Cazel/include/Cazel/Core/: Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.h  Log.h  MouseCodes.h  Timestep.h  Window.h  keycodes.h
Cazel/include/Cazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Cazel/include/Cazel/GameObject/: README
Cazel/include/Cazel/Renderer/: Buffer.h  Camera.h  EditorCamera.h  GraphicsContext.h  IndexBuffer.h  Log.h  OrthographicCamera.h  OrthographicCameraController.h  PerspectiveCamera.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Cazel/include/Cazel/imgui/: ImGuiLayer.h
Cazel/include/Platform/Linux/: LinuxWindow.h
Cazel/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h
Cazel/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Cazel/res/shaders/: Renderer2D_Circle.glsl  Renderer2D_Curve.glsl  basic.glsl  basic.shader  colors.shader  lights.shader
Cazel/src/: CMakeLists.txt  Cazel.h  Test.cpp  Test.h
Cazel/src/Cazel/: Application.cpp  CMakeLists.txt  Core.h  EntryPoint.h  Layer.cpp  LayerStack.cpp  Log.cpp
Cazel/src/Cazel/Bezier/: Bezier.cpp  CMakeLists.txt
Cazel/src/Cazel/Core/: Application.cpp  CMakeLists.txt  Layer.cpp  LayerStack.cpp  Log.cpp
Cazel/src/Cazel/Renderer/: Buffer.cpp  CMakeLists.txt  Camera.cpp  EditorCamera.cpp  IndexBuffer.cpp  Log.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  PerspectiveCamera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
Cazel/src/Cazel/imgui/: CMakeLists.txt  ImGuiLayer.cpp
Cazel/src/Platform/: CMakeLists.txt
Cazel/src/Platform/GLFW/: CMakeLists.txt  ImGuiGLFW.cpp
Cazel/src/Platform/Linux/: CMakeLists.txt  LinuxWindow.cpp
Cazel/src/Platform/OpenGL/: CMakeLists.txt  ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
Cazel/src/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsWindow.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Application.cpp  CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
TheEditor/: CMakeLists.txt
TheEditor/src/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  TheEditor.cpp
docs/: Renderer.md  deltatime.md  imgui 使用教程.md  maths.md  光照.md  相机.md  贝塞尔曲线.md
images/: cengine.drawio
